Complete - taskMove DAL over to VFS